syntax = "proto3";

package io.mystore.shipping.action;

import "kalix/annotations.proto";
import "google/protobuf/empty.proto";
import "google/protobuf/any.proto";
import "io/mystore/stock/entity/stock_sku_item_entity.proto";

service StockSkuItemToOrderSkuItem {
  option (kalix.codegen) = {
    action : {}
  };

  rpc OnStockRequestedJoinToOrder(stock.entity.StockRequestedJoinToOrder)
      returns (google.protobuf.Empty) {
    option (kalix.method).eventing.in = {
      event_sourced_entity : "stock_sku_item"
    };
  }

  rpc OnStockRequestedJoinToOrderRejected(
      stock.entity.StockRequestedJoinToOrderRejected)
      returns (google.protobuf.Empty) {
    option (kalix.method).eventing.in = {
      event_sourced_entity : "stock_sku_item"
    };
  }

  rpc OnOrderRequestedJoinToStockAccepted(
      stock.entity.OrderRequestedJoinToStockAccepted)
      returns (google.protobuf.Empty) {
    option (kalix.method).eventing.in = {
      event_sourced_entity : "stock_sku_item"
    };
  }

  rpc OnOrderRequestedJoinToStockRejected(
      stock.entity.OrderRequestedJoinToStockRejected)
      returns (google.protobuf.Empty) {
    option (kalix.method).eventing.in = {
      event_sourced_entity : "stock_sku_item"
    };
  }

  rpc IgnoreOtherEvents(google.protobuf.Any) returns (google.protobuf.Empty) {
    option (kalix.method).eventing.in = {
      event_sourced_entity : "stock_sku_item"
    };
  }
}
